test/spec/const.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/const.wast
(;; STDOUT ;;;
out/test/spec/const.wast:8: assert_malformed passed:
  out/test/spec/const/const.2.wat:1:18: error: invalid literal "0x100000000"
  (func (i32.const 0x100000000) drop)
                   ^^^^^^^^^^^
out/test/spec/const.wast:12: assert_malformed passed:
  out/test/spec/const/const.3.wat:1:18: error: invalid literal "-0x80000001"
  (func (i32.const -0x80000001) drop)
                   ^^^^^^^^^^^
out/test/spec/const.wast:19: assert_malformed passed:
  out/test/spec/const/const.6.wat:1:18: error: invalid literal "4294967296"
  (func (i32.const 4294967296) drop)
                   ^^^^^^^^^^
out/test/spec/const.wast:23: assert_malformed passed:
  out/test/spec/const/const.7.wat:1:18: error: invalid literal "-2147483649"
  (func (i32.const -2147483649) drop)
                   ^^^^^^^^^^^
out/test/spec/const.wast:30: assert_malformed passed:
  out/test/spec/const/const.10.wat:1:18: error: invalid literal "0x10000000000000000"
  (func (i64.const 0x10000000000000000) drop)
                   ^^^^^^^^^^^^^^^^^^^
out/test/spec/const.wast:34: assert_malformed passed:
  out/test/spec/const/const.11.wat:1:18: error: invalid literal "-0x8000000000000001"
  (func (i64.const -0x8000000000000001) drop)
                   ^^^^^^^^^^^^^^^^^^^
out/test/spec/const.wast:41: assert_malformed passed:
  out/test/spec/const/const.14.wat:1:18: error: invalid literal "18446744073709551616"
  (func (i64.const 18446744073709551616) drop)
                   ^^^^^^^^^^^^^^^^^^^^
out/test/spec/const.wast:45: assert_malformed passed:
  out/test/spec/const/const.15.wat:1:18: error: invalid literal "-9223372036854775809"
  (func (i64.const -9223372036854775809) drop)
                   ^^^^^^^^^^^^^^^^^^^^
out/test/spec/const.wast:56: assert_malformed passed:
  out/test/spec/const/const.22.wat:1:18: error: invalid literal "0x1p128"
  (func (f32.const 0x1p128) drop)
                   ^^^^^^^
out/test/spec/const.wast:60: assert_malformed passed:
  out/test/spec/const/const.23.wat:1:18: error: invalid literal "-0x1p128"
  (func (f32.const -0x1p128) drop)
                   ^^^^^^^^
out/test/spec/const.wast:64: assert_malformed passed:
  out/test/spec/const/const.24.wat:1:18: error: invalid literal "0x1.ffffffp127"
  (func (f32.const 0x1.ffffffp127) drop)
                   ^^^^^^^^^^^^^^
out/test/spec/const.wast:68: assert_malformed passed:
  out/test/spec/const/const.25.wat:1:18: error: invalid literal "-0x1.ffffffp127"
  (func (f32.const -0x1.ffffffp127) drop)
                   ^^^^^^^^^^^^^^^
out/test/spec/const.wast:75: assert_malformed passed:
  out/test/spec/const/const.28.wat:1:18: error: invalid literal "1e39"
  (func (f32.const 1e39) drop)
                   ^^^^
out/test/spec/const.wast:79: assert_malformed passed:
  out/test/spec/const/const.29.wat:1:18: error: invalid literal "-1e39"
  (func (f32.const -1e39) drop)
                   ^^^^^
out/test/spec/const.wast:86: assert_malformed passed:
  out/test/spec/const/const.32.wat:1:18: error: invalid literal "340282356779733661637539395458142568448"
  (func (f32.const 340282356779733661637539395458142568448) drop)
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
out/test/spec/const.wast:90: assert_malformed passed:
  out/test/spec/const/const.33.wat:1:18: error: invalid literal "-340282356779733661637539395458142568448"
  (func (f32.const -340282356779733661637539395458142568448) drop)
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
out/test/spec/const.wast:101: assert_malformed passed:
  out/test/spec/const/const.40.wat:1:18: error: invalid literal "0x1p1024"
  (func (f64.const 0x1p1024) drop)
                   ^^^^^^^^
out/test/spec/const.wast:105: assert_malformed passed:
  out/test/spec/const/const.41.wat:1:18: error: invalid literal "-0x1p1024"
  (func (f64.const -0x1p1024) drop)
                   ^^^^^^^^^
out/test/spec/const.wast:109: assert_malformed passed:
  out/test/spec/const/const.42.wat:1:18: error: invalid literal "0x1.fffffffffffff8p1023"
  (func (f64.const 0x1.fffffffffffff8p1023) drop)
                   ^^^^^^^^^^^^^^^^^^^^^^^
out/test/spec/const.wast:113: assert_malformed passed:
  out/test/spec/const/const.43.wat:1:18: error: invalid literal "-0x1.fffffffffffff8p1023"
  (func (f64.const -0x1.fffffffffffff8p1023) drop)
                   ^^^^^^^^^^^^^^^^^^^^^^^^
out/test/spec/const.wast:120: assert_malformed passed:
  out/test/spec/const/const.46.wat:1:18: error: invalid literal "1e309"
  (func (f64.const 1e309) drop)
                   ^^^^^
out/test/spec/const.wast:124: assert_malformed passed:
  out/test/spec/const/const.47.wat:1:18: error: invalid literal "-1e309"
  (func (f64.const -1e309) drop)
                   ^^^^^^
out/test/spec/const.wast:131: assert_malformed passed:
  out/test/spec/const/const.50.wat:1:18: error: invalid literal "269653970229347356221791135597556535197105851288767494898376215204735891170042808140884337949150317257310688430271573696351481990334196274152701320055306275479074865864826923114368235135583993416113802762682700913456874855354834422248712838998185022412196739306217084753107265771378949821875606039276187287552"
  (func (f64.const 269653970229347356221791135597556535197105851288767494898376...
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
out/test/spec/const.wast:135: assert_malformed passed:
  out/test/spec/const/const.51.wat:1:18: error: invalid literal "-269653970229347356221791135597556535197105851288767494898376215204735891170042808140884337949150317257310688430271573696351481990334196274152701320055306275479074865864826923114368235135583993416113802762682700913456874855354834422248712838998185022412196739306217084753107265771378949821875606039276187287552"
  (func (f64.const -26965397022934735622179113559755653519710585128876749489837...
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
24/24 tests passed.
;;; STDOUT ;;)
